--- a/tarde/projeto-gamer-tarde/css/login.css
+++ b/tarde/projeto-gamer-tarde/css/login.css
@@ -142,69 +142,35 @@ header .menu-usuarios {
 }
 
 
-/* MAIN */
+
+/* Main */
 
 main {
     margin-top: 60px;
-}
+    height: 687px;
 
-/* Banner */
-
-main .banner {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 606px;
-    padding-top: 20px;
-    padding-bottom: 40px;
-    background-image: url(../assets/images/fundo-banner-mobile.png);
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
-}
-
-main .banner h1 {
-    font-family: TitilliumWeb-Black;
-    font-size: 40px;
-    text-shadow: 0 0 7px #FD4255;
-}
-
-main .banner a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 170px;
-    height: 40px;
-    font-family: TitilliumWeb-Bold;
-    font-size: 24px;
-    color: black;
-    text-decoration: none;
-    background-color: #F9AA01;
-    border-radius: 8px;
-}
-
-/* Sessão Jogos */
-
-main .jogos {
-    width: 100%;
-    height: 590px;
-    background-color: #1B1426;
-}
-
-main .jogos .jogos-flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    background-image: url(../assets/images/fundo-login-mobile.png);
+    background-size: contain;
+    background-position: center;
 }
 
 
-/* Tablets >= 768px */
-@media screen and (min-width: 768px) {}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Desktop >= 1200px*/
 @media screen and (min-width: 1200px) {
+
     .layout-grid {
         width: 100%;
         max-width: 1200px;
@@ -292,76 +258,5 @@ main .jogos .jogos-flex {
         height: auto;
         background-color: transparent;
         background-image: none;
-    }
-
-    /* MAIN */
-    main {
-        margin-top: 0;
-    }
-
-    main .banner {
-        height: 722px;
-        background-image: url(../assets/images/fundo-banner-desktop.png);
-    }
-
-    main .jogos .jogos-flex {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        height: 500px;
-    }
-
-    main .jogos img {
-        width: 556px;
-        height: 313px;
-    }
-
-
-
-    main .progamer {
-        width: 100%;
-        height: 1000px;
-        background-color: #F9AA01;
-    }
-
-
-    main .progamer .progamer-flex {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        
-    }
-    main .progamer .progamer-titulo { 
-        width: 100%;
-        background-color: #FD4255;
-        border: 3px solid white;
-    }
-
-    main .progamer article {
-        position: relative;
-        width: 585px;
-        height: 700px;
-        background-color: #FD4255;
-        border: 3px solid white;
-    }
-
-    main .progamer article .jogos-diferentes,
-    main .progamer article .professores {
-        
-        width: 360px;
-        height: 440px;
-        background-color: purple;
-    }
-
-    main .progamer article .jogos-diferentes {
-        position: absolute;
-        bottom :40px;
-        right :0px;
-    }
-
-    main .progamer article .professores {
-        position: absolute;
-        bottom :40px;
-        left :0px;
     }
 }
