--- a/Estudos/gamer-para-estudo/css/login.css
+++ b/Estudos/gamer-para-estudo/css/login.css
@@ -151,7 +151,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 0 10px;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, .4), rgba(255, 255, 255, .1));
+    background-image: linear-gradient(to right bottom, rgba(27, 20, 38, .6), rgba(60, 3, 65, .38)) padding-box, /* fundo borda */ linear-gradient(90deg, rgba(255, 255, 255, .6), rgba(255, 255, 255, .1));
     backdrop-filter: blur(25px);
     border-radius: 10px;
 }
