--- a/Estudos/gamer-para-estudo/css/header.css
+++ b/Estudos/gamer-para-estudo/css/header.css
@@ -185,7 +185,7 @@ header .icons-header img {
 
     .header {
         position: static;
-        height: auto;
+        /* height: auto; */
         margin: 0;
         padding: 0;
         flex-wrap: wrap;
