--- a/Estudos/gamer-para-estudo/css/jogadores.css
+++ b/Estudos/gamer-para-estudo/css/jogadores.css
@@ -21,7 +21,7 @@ main .cadastro-equipes {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    align-items: center;
     position: relative;
     z-index: 0;
     height: 100%;
@@ -242,5 +242,20 @@ main .cadastro-equipes table td img.yellow-trash {
         max-width: 992px;
         margin: 0 auto;
         /* border: 1px solid #EC4358; */
+    }
+    main {
+        background-image: url(../images/background-jogadores.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    main .cadastro-equipes .frm-cad-equipe {
+        width: 800px;
+    }
+    main .cadastro-equipes .frm-cad-equipe button {
+        max-width: 243px;
+    }
+    main .cadastro-equipes table {
+        width: 800px;
     }
 }
