--- a/Manha/Backend-II/projeto-gamer-manha/Views/Equipe/Index.cshtml
+++ b/Manha/Backend-II/projeto-gamer-manha/Views/Equipe/Index.cshtml
@@ -10,11 +10,10 @@
 <form method="post" action="@Url.Action("Cadastrar")" enctype="multipart/form-data">
 
     <label for="">Nome</label>
-    <input type="text" name="Nome">
+    <input type="text" name="Nome" required>
 
     <label for="">Imagem</label>
     <input type="file" name="Imagem">
-    
 
     <button type="submit">Cadastrar</button>
 
@@ -26,17 +25,21 @@
         <th>Id</th>
         <th>Nome</th>
         <th>Imagem</th>
+        <th>Ações</th>
     </thead>
 
     <tbody>
-
+        
         @foreach (Equipe equipe in ViewBag.Equipe)
         {
             <tr>
                 <td>@equipe.IdEquipe</td>
                 <td>@equipe.Nome</td>
                 <td>
-                    <img src="/img/Equipes/@equipe.Imagem" alt="Imagem da equipe @equipe.Nome" width="50px">   
+                    <img src="/img/Equipes/@equipe.Imagem" alt="Imagem da equipe @equipe.Nome" width="50px">
+                </td>
+                <td>
+                    <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe" >Excluir</a>
                 </td>
             </tr>            
         }
@@ -44,3 +47,4 @@
     </tbody>
 
 </table>
+
