--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
@@ -19,15 +19,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li> *@
 
                         <li>
-                            <a asp-area="" asp-controller="Equipe" asp-action="Index" >Equipes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipe" asp-action="Index" >Equipes</a>
                         </li>
                     </ul>
                 </div>
