--- a/Manha/Backend-II/projeto-gamer-manha/Views/Equipe/Index.cshtml
+++ b/Manha/Backend-II/projeto-gamer-manha/Views/Equipe/Index.cshtml
@@ -41,6 +41,9 @@
                 <td>
                     <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe" >Excluir</a>
                 </td>
+                <td>
+                    <a asp-area="" asp-controller="Equipe" asp-action="Editar" asp-route-id="@equipe.IdEquipe">Editar</a>
+                </td>
             </tr>            
         }
 
