--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Equipe/Edit.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Equipe/Edit.cshtml
@@ -11,7 +11,7 @@
     <input type="hidden" name="IdEquipe" value="@ViewBag.Equipe.IdEquipe">
 
     <label for="">Nome</label>
-    <input type="text" name="Nome" value="@ViewBag.Equipe.Nome">
+    <input type="text" name="Nome" value="@ViewBag.Equipe.Nome" required>
 
     <label for="">Imagem</label>
     <input type="file" name="Imagem" value="@ViewBag.Equipe.Imagem">
@@ -19,3 +19,4 @@
     <button type="submit">Atualizar</button>
 
 </form>
+
