--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Equipe/Index.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Equipe/Index.cshtml
@@ -12,7 +12,7 @@
     <input type="text" name="Nome" required>
 
     <label for="">Imagem</label>
-    <input type="file" name="Imagem" required>
+    <input type="file" name="Imagem">
 
     <button type="submit">Cadastrar</button>
 </form>
