--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Equipe" asp-action="Index" >Equipes</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="Index" >Jogador</a>
+                        </li>
                     </ul>
                 </div>
             </div>
