--- a/Manha/Backend-II/projeto-gamer-manha/Views/Shared/_Layout.cshtml
+++ b/Manha/Backend-II/projeto-gamer-manha/Views/Shared/_Layout.cshtml
@@ -28,7 +28,10 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Equipe" asp-action="Index">Equipes</a>
-                        </li>                        
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="Index">Jogadores</a>
+                        </li>                         
                     </ul>
                 </div>
             </div>
