--- a/Manha/Backend-II/projeto-gamer-manha/Views/Jogador/Index.cshtml
+++ b/Manha/Backend-II/projeto-gamer-manha/Views/Jogador/Index.cshtml
@@ -6,12 +6,42 @@
 
 <h1>Tela de Jogadores</h1>
 
+
+<form method="post" action="@Url.Action("Cadastrar")">
+
+    <label for="">Nome</label>
+    <input type="text" name="Nome">
+
+    <label for="">Email</label>
+    <input type="email" name="Email">
+
+    <label for="">Senha</label>
+    <input type="password" name="Senha">
+
+    <label for="">Equipe</label>
+    <select name="IdEquipe" id="IdEquipe">
+
+        <option value="0">Selecione uma opção: </option>
+
+        @foreach (Equipe equipe in ViewBag.Equipe)
+        {
+            <option value="@equipe.IdEquipe">@equipe.Nome</option>
+        }
+
+    </select>
+
+    <button type="submit">Cadastrar</button>
+
+</form>
+
+
 <table class="table table-striped table-responsive">
     <thead>
         <th>Id</th>
         <th>Nome</th>
         <th>Email</th>
         <th>Equipe</th>
+        <th>Ações</th>
     </thead>
 
     <tbody>
@@ -24,6 +54,13 @@
                 <td>
                     <img src="/img/Equipes/@jogador.Equipe.Imagem" alt="Imagem da equipe @jogador.Equipe.Nome" width="50px">
                 </td>
+                <td>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@jogador.IdJogador">Excluir</a>
+                </td>
+                <td>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
+                </td>
+
             </tr>            
         }
     </tbody>
