--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Jogador/Index.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Jogador/Index.cshtml
@@ -6,6 +6,29 @@
 
 <h2>Tela de Jogadores</h2>
 
+<form method="post" action="@Url.Action("Cadastrar")">
+    <label for="">Nome</label>
+    <input type="text" name="Nome">
+
+    <label for="">Email</label>
+    <input type="email" name="Email">
+
+    <label for="">Senha</label>
+    <input type="password" name="Senha">
+
+    <label for="">Equipe</label>
+    <select name="IdEquipe" id="IdEquipe">
+        <option value="0">Selecione uma equipe: </option>
+        @foreach (Equipe equipe in ViewBag.Equipe)
+        {
+            <option value="@equipe.IdEquipe">@equipe.Nome</option>
+        }
+    </select>
+
+    <button type="submit">Cadastrar</button>
+
+</form>
+
 <table class="table table-striped table-responsive">
     <thead>
         <th>Id</th>
@@ -24,6 +47,13 @@
                 <td>
                     <img src="/img/Equipes/@jogador.Equipe.Imagem" alt="Imagem da equipe @jogador.Equipe.Nome" width="50px">
                 </td>
+                <td>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@jogador.IdJogador">Excluir</a>
+                </td>
+                <td>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
+                </td>
+
             </tr>
         }
     </tbody>
