--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="Index" >Jogador</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index" >Login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
