--- a/Manha/Backend-II/projeto-gamer-manha/Views/Equipe/Edit.cshtml
+++ b/Manha/Backend-II/projeto-gamer-manha/Views/Equipe/Edit.cshtml
@@ -6,15 +6,25 @@
 
 <h1>Edição de Equipe</h1>
 
-<form method="post" action="@Url.Action("Atualizar")" enctype="multipart/form-data">
+@if (ViewBag.UserName == null)
+{
+    <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index">
+        Login
+    </a>
+}   
+else
+{
+    <form method="post" action="@Url.Action("Atualizar")" enctype="multipart/form-data">
 
-    <input type="hidden" name="IdEquipe" value="@ViewBag.Equipe.IdEquipe">
+        <input type="hidden" name="IdEquipe" value="@ViewBag.Equipe.IdEquipe">
 
-    <label for="">Nome</label>
-    <input type="text" name="Nome" value="@ViewBag.Equipe.Nome">
+        <label for="">Nome</label>
+        <input type="text" name="Nome" value="@ViewBag.Equipe.Nome">
 
-    <label for="">Imagem</label>
-    <input type="file" name="Imagem"  value="@ViewBag.Equipe.Imagem">
-    <button type="submit">Atualizar</button>
+        <label for="">Imagem</label>
+        <input type="file" name="Imagem"  value="@ViewBag.Equipe.Imagem">
+        <button type="submit">Atualizar</button>
 
-</form>
+    </form>
+}
+
