--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Equipe/Index.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Equipe/Index.cshtml
@@ -6,8 +6,13 @@
 
 <h1>Tela de Equipes</h1>
 
-
-<form method='post' action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+@if (ViewBag.UserName == null)
+{
+    <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+}
+else
+{
+    <form method='post' action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
     <label for="">Nome</label>
     <input type="text" name="Nome" required>
 
@@ -15,7 +20,7 @@
     <input type="file" name="Imagem">
 
     <button type="submit">Cadastrar</button>
-</form>
+    </form>
 
 
 <table class="table table-striped table-responsive">
@@ -47,3 +52,5 @@
         
     </tbody>
 </table>
+}
+
