--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Jogador/Edit.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Jogador/Edit.cshtml
@@ -6,35 +6,43 @@
 
 <h1>Edição de Jogadores</h1>
 
-<form method="post" action="@Url.Action("Atualizar")">
+@if (ViewBag.UserName == null)
+{
+    <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+}
+else
+{
 
-    <input type="hidden" name="IdJogador" value="@ViewBag.Jogador.IdJogador">
+    <form method="post" action="@Url.Action("Atualizar")">
 
-    <label for="">Nome</label>
-    <input type="text" name="Nome" value="@ViewBag.Jogador.Nome">
+        <input type="hidden" name="IdJogador" value="@ViewBag.Jogador.IdJogador">
 
-    <label for="">Email</label>
-    <input type="email" name="Email" value="@ViewBag.Jogador.Email">
+        <label for="">Nome</label>
+        <input type="text" name="Nome" value="@ViewBag.Jogador.Nome">
 
-    <label for="">Senha</label>
-    <input type="password" name="Senha" value="@ViewBag.Jogador.Senha">
+        <label for="">Email</label>
+        <input type="email" name="Email" value="@ViewBag.Jogador.Email">
 
-    <label for="">Equipe</label>
-    <select name="IdEquipe" id="IdEquipe">
-        <option value="0">Selecione uma equipe: </option>
+        <label for="">Senha</label>
+        <input type="password" name="Senha" value="@ViewBag.Jogador.Senha">
 
-        @foreach (Equipe equipe in ViewBag.Equipe)
-        {
-            @if (equipe.IdEquipe == @ViewBag.Jogador.IdEquipe)
+        <label for="">Equipe</label>
+        <select name="IdEquipe" id="IdEquipe">
+            <option value="0">Selecione uma equipe: </option>
+
+            @foreach (Equipe equipe in ViewBag.Equipe)
             {
-                <option value="@equipe.IdEquipe" selected>@equipe.Nome</option>
+                @if (equipe.IdEquipe == @ViewBag.Jogador.IdEquipe)
+                {
+                    <option value="@equipe.IdEquipe" selected>@equipe.Nome</option>
+                }
+                else
+                {
+                    <option value="@equipe.IdEquipe">@equipe.Nome</option>
+                }
             }
-            else
-            {
-                <option value="@equipe.IdEquipe">@equipe.Nome</option>
-            }
-        }
-    </select>
+        </select>
 
-    <button type="submit">Atualizar</button>
-</form>
+        <button type="submit">Atualizar</button>
+    </form>
+}
