--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Jogador/Index.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Jogador/Index.cshtml
@@ -6,55 +6,64 @@
 
 <h2>Tela de Jogadores</h2>
 
-<form method="post" action="@Url.Action("Cadastrar")">
-    <label for="">Nome</label>
-    <input type="text" name="Nome">
+@if (ViewBag.UserName == null)
+{
+    <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+}
+else
+{
 
-    <label for="">Email</label>
-    <input type="email" name="Email">
+    <form method="post" action="@Url.Action("Cadastrar")">
+        <label for="">Nome</label>
+        <input type="text" name="Nome">
 
-    <label for="">Senha</label>
-    <input type="password" name="Senha">
+        <label for="">Email</label>
+        <input type="email" name="Email">
 
-    <label for="">Equipe</label>
-    <select name="IdEquipe" id="IdEquipe">
-        <option value="0">Selecione uma equipe: </option>
-        @foreach (Equipe equipe in ViewBag.Equipe)
-        {
-            <option value="@equipe.IdEquipe">@equipe.Nome</option>
-        }
-    </select>
+        <label for="">Senha</label>
+        <input type="password" name="Senha">
 
-    <button type="submit">Cadastrar</button>
+        <label for="">Equipe</label>
+        <select name="IdEquipe" id="IdEquipe">
+            <option value="0">Selecione uma equipe: </option>
+            @foreach (Equipe equipe in ViewBag.Equipe)
+            {
+                <option value="@equipe.IdEquipe">@equipe.Nome</option>
+            }
+        </select>
 
-</form>
+        <button type="submit">Cadastrar</button>
 
-<table class="table table-striped table-responsive">
-    <thead>
-        <th>Id</th>
-        <th>Nome</th>
-        <th>Email</th>
-        <th>Equipe</th>
-    </thead>
+    </form>
 
-    <tbody>
-        @foreach (Jogador jogador in ViewBag.Jogador)
-        {
-            <tr>
-                <td>@jogador.IdJogador</td>
-                <td>@jogador.Nome</td>
-                <td>@jogador.Email</td>
-                <td>
-                    <img src="/img/Equipes/@jogador.Equipe.Imagem" alt="Imagem da equipe @jogador.Equipe.Nome" width="50px">
-                </td>
-                <td>
-                    <a asp-area="" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@jogador.IdJogador">Excluir</a>
-                </td>
-                <td>
-                    <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
-                </td>
 
-            </tr>
-        }
-    </tbody>
-</table>
+    <table class="table table-striped table-responsive">
+        <thead>
+            <th>Id</th>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Equipe</th>
+        </thead>
+
+        <tbody>
+            @foreach (Jogador jogador in ViewBag.Jogador)
+            {
+                <tr>
+                    <td>@jogador.IdJogador</td>
+                    <td>@jogador.Nome</td>
+                    <td>@jogador.Email</td>
+                    <td>
+                        <img src="/img/Equipes/@jogador.Equipe.Imagem" alt="Imagem da equipe @jogador.Equipe.Nome" width="50px">
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@jogador.IdJogador">Excluir</a>
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
+                    </td>
+
+                </tr>
+            }
+        </tbody>
+    </table>
+}
