--- a/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
+++ b/Tarde/Backend-II/projeto-gamer-tarde/Views/Shared/_Layout.cshtml
@@ -19,22 +19,30 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li> *@
+                      
+                        @if (ViewBag.UserName != null)
+                        {
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Equipe" asp-action="Index" >Equipes</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="Index" >Jogador</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout" >Logout</a>
+                            </li>
+                            
+                            <li>Olá @ViewBag.UserName, seja bem vindo !</li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index" >Login</a>
+                            </li>
+                        }
 
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipe" asp-action="Index" >Equipes</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="Index" >Jogador</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index" >Login</a>
-                        </li>
+
+
                     </ul>
                 </div>
             </div>
